// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots PlaceholderLine Custom color 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "height": undefined,
      },
      undefined,
    ]
  }
>
  <View
    noMargin={true}
    style={
      Array [
        Object {
          "borderRadius": 0,
        },
        Object {
          "height": 10,
        },
        Object {
          "backgroundColor": "#000000",
        },
      ]
    }
    width="100%"
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </View>
</View>
`;

exports[`Storyshots PlaceholderLine Custom width 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "height": undefined,
      },
      undefined,
    ]
  }
>
  <View
    noMargin={true}
    style={
      Array [
        Object {
          "borderRadius": 0,
        },
        Object {
          "height": 10,
        },
        Object {
          "backgroundColor": "#ECEFF1",
        },
      ]
    }
    width="30%"
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </View>
</View>
`;

exports[`Storyshots PlaceholderLine Default 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "height": undefined,
      },
      undefined,
    ]
  }
>
  <View
    noMargin={true}
    style={
      Array [
        Object {
          "borderRadius": 0,
        },
        Object {
          "height": 10,
        },
        Object {
          "backgroundColor": "#ECEFF1",
        },
      ]
    }
    width="100%"
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </View>
</View>
`;

exports[`Storyshots PlaceholderLine Small 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "height": undefined,
      },
      undefined,
    ]
  }
>
  <View
    noMargin={true}
    style={
      Array [
        Object {
          "borderRadius": 0,
        },
        Object {
          "height": 5,
        },
        Object {
          "backgroundColor": "#ECEFF1",
        },
      ]
    }
    width="100%"
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </View>
</View>
`;

exports[`Storyshots PlaceholderLine Tiny 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "height": undefined,
      },
      undefined,
    ]
  }
>
  <View
    noMargin={true}
    style={
      Array [
        Object {
          "borderRadius": 0,
        },
        Object {
          "height": 2,
        },
        Object {
          "backgroundColor": "#ECEFF1",
        },
      ]
    }
    width="100%"
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </View>
</View>
`;
